Fixing some layout issues.

--- a/style.css
+++ b/style.css
@@ -52,25 +52,31 @@ body {
 
 .card__image {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card__body {
     padding: 3rem;
+    letter-spacing: 0.1rem;
 }
 
 .card__title {
-    font-size: 3rem;
+    font-size: 2.8rem;
     line-height: 1.25;
+    font-weight: 700;
+    margin: 1rem 0;
 }
 
 .card__text {
     color: var(--color-main-p);
-    padding: 1rem 1rem 2rem;
+    margin-top: 2rem;
 }
 
 .card__stats {
     display: flex;
     flex-direction: column;
+    margin-top: 3rem;
 }
 
 .highlight {
@@ -83,12 +89,13 @@ body {
 }
 
 .stats__number {
-    font-size: 2.4rem;
+    font-size: 2rem;
 }
 
 .stats__title {
     text-transform: uppercase;
     color: var(--color-stats-h);
+    font-size: 1.3rem;
 }
 
 /* attribution styles */
@@ -101,4 +108,37 @@ footer {
 }
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+/* Desktop layout */
+@media screen and (min-width: 1024px) {
+    body {
+        font-size: 1.3rem;
+    }
+
+    .grid {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .card {
+        max-width: 1100px;
+        text-align: left;
+    }
+
+    .card__image {
+        order: 1;
+    }
+
+    .card__body {
+        margin-right: 6rem;
+        padding: 6rem 4rem 0 6rem;
+    }
+
+    .card__stats {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 3rem;
+        margin-top: 5rem;
+    }
 }
